Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
GstVideoParseUserDataUnregistered does not support multiple unregistered messages
It is to be expected that H.264 frames can have multiple unregistered SEI messages attached. Typically, but not necessarily, with different UUIDs.
However, the code added in ca2eb9f6 (cc @ylatuya), which includes public API (!), assumes there can only be one.