subprojects/gst-plugins-bad/gst/videoparsers/gsth264parse.c
@@ -235,7 +235,8 @@ gst_h264_parse_finalize (GObject * object)
 {
   GstH264Parse *h264parse = GST_H264_PARSE (object);
 
-  gst_video_clear_user_data_unregistered (&h264parse->user_data_unregistered);
+  gst_video_clear_user_data_unregistered (&h264parse->user_data_unregistered,
+      TRUE);
 
   g_object_unref (h264parse->frame_out);
   g_array_unref (h264parse->nal_backlog);
@@ -263,7 +264,8 @@ gst_h264_parse_reset_frame (GstH264Parse * h264parse)
   h264parse->have_aud_in_frame = FALSE;
   gst_adapter_clear (h264parse->frame_out);
   gst_video_clear_user_data (&h264parse->user_data);
-  gst_video_clear_user_data_unregistered (&h264parse->user_data_unregistered);
+  gst_video_clear_user_data_unregistered (&h264parse->user_data_unregistered,
+      FALSE);
 }
 
 static void
