subprojects/gst-plugins-bad/gst/videoparsers/gsth265parse.c
@@ -182,7 +182,8 @@ gst_h265_parse_finalize (GObject * object)
 {
   GstH265Parse *h265parse = GST_H265_PARSE (object);
 
-  gst_video_clear_user_data_unregistered (&h265parse->user_data_unregistered);
+  gst_video_clear_user_data_unregistered (&h265parse->user_data_unregistered,
+      TRUE);
 
   g_object_unref (h265parse->frame_out);
 
@@ -209,7 +210,8 @@ gst_h265_parse_reset_frame (GstH265Parse * h265parse)
   h265parse->have_pps_in_frame = FALSE;
   gst_adapter_clear (h265parse->frame_out);
   gst_video_clear_user_data (&h265parse->user_data);
-  gst_video_clear_user_data_unregistered (&h265parse->user_data_unregistered);
+  gst_video_clear_user_data_unregistered (&h265parse->user_data_unregistered,
+      FALSE);
 }
 
 static void
